--- a/public/Contacto.html
+++ b/public/Contacto.html
@@ -79,7 +79,7 @@
   </div>
 
   <!--Section: Contact v.2-->
-  <section class="mb-4">
+  <div class="container">
 
       <div class="col-md-3 text-center">
         <ul class="list-unstyled mb-0">
@@ -103,13 +103,13 @@
         </ul>
       </div>
 
-  </section>
+  </div>
   <!--Section: Contact v.2-->
 
 
 
 
-  <div class="container">
+  <div class="container " >
     <footer class="d-flex flex-wrap justify-content-between align-items-center py-3 my-4 border-top">
       <div class="col-md-4 d-flex align-items-center">
         <a href="index.html" class="mb-3 me-2 mb-md-0 text-muted text-decoration-none lh-1">
