--- a/public/Contacto.html
+++ b/public/Contacto.html
@@ -79,7 +79,7 @@
   </div>
 
   <!--Section: Contact v.2-->
-  <div class="container">
+  <div class="container align-content-center">
 
       <div class="col-md-3 text-center">
         <ul class="list-unstyled mb-0">
