--- a/public/Contacto.html
+++ b/public/Contacto.html
@@ -79,9 +79,9 @@
   </div>
 
   <!--Section: Contact v.2-->
-  <div class="container align-content-center">
+  <div class="container">
 
-      <div class="col-md-3 text-center">
+      <div class="container text-center">
         <ul class="list-unstyled mb-0">
           <li><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-geo-alt-fill" viewBox="0 0 16 16">
             <path d="M8 16s6-5.686 6-10A6 6 0 0 0 2 6c0 4.314 6 10 6 10zm0-7a3 3 0 1 1 0-6 3 3 0 0 1 0 6z"/>
